# tankCmake

./: .travis.yml  CMakeLists.txt
Core/: command.h  move.h  myVector.h  rotate.h  uobject.h
Tests/: CMakeLists.txt  main.cpp  test_move.cpp  test_rotate.cpp
